force-app/main/default/objects/ElectronPartOrderRequest__e/ElectronPartOrderRequest__e.object-meta.xml
<CustomObject>
    <label>ElectronPartOrderRequest</label>
    <pluralLabel>ElectronPartOrderRequests</pluralLabel>
</CustomObject>