force-app/main/default/objects/ElectronPartOrderRequest__e/fields/Part_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>Part_Request_ID__c</fullName>
    <label>Part Request ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>