force-app/main/default/objects/ElectronPartOrderRequest__e/fields/Repair_Part_Name__c.field-meta.xml
<CustomField>
    <fullName>Repair_Part_Name__c</fullName>
    <label>Repair Part Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>