force-app/main/default/objects/ElectronPartOrderRequest__e/fields/RepairPartId__c.field-meta.xml
<CustomField>
    <fullName>RepairPartId__c</fullName>
    <label>RepairPartId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>