force-app/main/default/objects/ElectronPartOrderRequest__e/fields/RequestType__c.field-meta.xml
<CustomField>
    <fullName>RequestType__c</fullName>
    <description>expected values are "estimate" and "purchase order"</description>
    <label>RequestType</label>
    <length>40</length>
    <type>Text</type>
</CustomField>